--- a/sub2_5.html
+++ b/sub2_5.html
@@ -24,9 +24,8 @@
 			<pre>
 				<code class="html">&lt;html&gt;
 &lt;head&gt;
-&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.0/css/swiper.css" type="text/css" &gt; &lt;!-- 필요시 --&gt;
+&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.0/css/swiper.css" type="text/css" &gt;
 &lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.0/css/swiper.min.css" type="text/css"&gt; &lt;!-- 압축버전 --&gt;
-&lt;!-- slick-theme.css 미사용시 --&gt;
 &lt;style&gt;
 	.swiper-container{width: [width]; height: [height];}
 &lt;/style&gt;
