--- a/sub2_5.html
+++ b/sub2_5.html
@@ -32,7 +32,7 @@
 &lt;/head&gt;
 &lt;body&gt;
 &lt;div class="swiper-container"&gt;
-	&lt;div class="swiper-container"&gt;
+	&lt;div class="swiper-wrapper"&gt;
 		&lt;div class="swiper-slide"&gt;your content&lt;/div&gt;
 		&lt;div class="swiper-slide"&gt;your content&lt;/div&gt;
 		&lt;div class="swiper-slide"&gt;your content&lt;/div&gt;
