--- a/sub1_5.html
+++ b/sub1_5.html
@@ -19,7 +19,7 @@
 	<div id="container">
 		<div class="aside_wrap"><aside id="aside"></aside></div>
 		<div id="content">
-			<h2>모바일 &lt;meta&gt;</h2>
+			<h2>모바일</h2>
 			<h3>모바일 코딩 시 사용되는 &lt;meta&gt;</h3>
 			<pre>
 				<code class="html">&lt;meta name="viewprot" content="width=640px, target-density=device-dpi"&gt;
@@ -30,6 +30,7 @@
 &lt;meta name="apple-mobile-web-app-status-bar-style" content="black | back-translucent ..."&gt; //iso 상태표시줄
 </code>
 			</pre>
+			<h3>모바일 코딩 시 사용되는 속성</h3>
 			<pre>
 				<code class="css">*{-webkit-text-size-adjust: none;}</code>
 			</pre>
