--- a/sub1_5.html
+++ b/sub1_5.html
@@ -24,7 +24,7 @@
 			<pre>
 				<code class="html">&lt;meta name="viewprot" content="width=640px, target-density=device-dpi"&gt;
 &lt;meta name="theme-co0lor" content="[color code]"&gt; // android 주소창 
-&lt;meta name="format-detectoin" content="telephone=no, email=no, address=no &gt;
+&lt;meta name="format-detectoin" content="telephone=no, email=no, address=no" &gt;
 &lt;meta name="-webkit-web-app-capabble" content="yes | no"&gt;
 &lt;meta name="apple-webkit-web-app-capabble" content="yes | no"&gt;
 &lt;meta name="apple-mobile-web-app-status-bar-style" content="black | back-translucent ..."&gt; //iso 상태표시줄
