--- a/sub2_5.html
+++ b/sub2_5.html
@@ -26,9 +26,6 @@
 &lt;head&gt;
 &lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.0/css/swiper.css" type="text/css" &gt;
 &lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.0/css/swiper.min.css" type="text/css"&gt; &lt;!-- 압축버전 --&gt;
-&lt;style&gt;
-	.swiper-container{width: [width]; height: [height];}
-&lt;/style&gt;
 &lt;/head&gt;
 &lt;body&gt;
 &lt;div class="swiper-container"&gt;
@@ -62,7 +59,7 @@
 	speed: [number], // default: 300
 	width: [number],
 	height: [number],
-	slidesPerView: [number] | auto, // default: 1
+	slidesPerView: [number] | auto, // default: 1, auto 사용시 .swiper-container에 width(또는 height)에 값을 주면 안된다.
 	loop: [boolean], // default: false
 	breakpoints: [object],
 	spaceBetween: [number] // default: 0
