--- a/sub1_5.html
+++ b/sub1_5.html
@@ -34,6 +34,8 @@
 			<pre>
 				<code class="css">*{-webkit-text-size-adjust: none;}</code>
 			</pre>
+			<h3>반응형 디자인 확인</h3>
+			<p><a href="http://troy.labs.daum.net" target="_blank" title="새창열림">troy</a>, <a href="http://mattkersley.com/responsive" target="_blank" title="새창열림">mattkersley</a>, <a href="http://www.responsinator.com" target="_blank" title="새창열림">responsinator</a>등에서 확인할 수 있다. 다만, 실제 디바이스와는 다르다.</p>
 			<small>2020-05-18</small>
 		</div>
 	</div>
