--- a/sub1_5.html
+++ b/sub1_5.html
@@ -23,7 +23,7 @@
 			<h3>모바일 코딩 시 사용되는 &lt;meta&gt;</h3>
 			<pre>
 				<code class="html">&lt;meta name="viewprot" content="width=640px, target-density=device-dpi"&gt;
-&lt;meta name="theme-co0lor" content="[color code]"&gt; // android 주소창 
+&lt;meta name="theme-color" content="[color code]"&gt; // android 주소창 
 &lt;meta name="format-detectoin" content="telephone=no, email=no, address=no" &gt;
 &lt;meta name="-webkit-web-app-capabble" content="yes | no"&gt;
 &lt;meta name="apple-webkit-web-app-capabble" content="yes | no"&gt;
