--- a/sub1_4.html
+++ b/sub1_4.html
@@ -56,7 +56,7 @@
 	text-overflow: ellepsis;
 }</code>
 			</pre>
-			<p>모든 브라우저에서 사용할 수 있는게 아니니 <a href="https://caniuse.com/#search=place">caniuse</a>에서 확인한 뒤 사용하는 것이 좋다.</p>
+			<p>모든 브라우저에서 사용할 수 있는게 아니니 <a href="https://caniuse.com/#search=%3Aplaceholder-shown">caniuse</a>에서 확인한 뒤 사용하는 것이 좋다.</p>
 			<small>2020-05-21</small>
 		</div>
 	</div>
