--- a/sub1_5.html
+++ b/sub1_5.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="google-site-verification" content="H6VrNCQV_FasPUPBicvcr6rj160agELzS_xKc5mJQeM">
-<title>모바일 &lt;meta&gt; | Hyunjin study</title>
+<title>모바일 코딩 | Hyunjin study</title>
 <link rel="stylesheet" href="/css/reset.css?ver=1.0" type="text/css">
 <link rel="stylesheet" href="/css/main.css?ver=1.0" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap">
@@ -19,7 +19,7 @@
 	<div id="container">
 		<div class="aside_wrap"><aside id="aside"></aside></div>
 		<div id="content">
-			<h2>모바일</h2>
+			<h2>모바일 코딩</h2>
 			<h3>모바일 코딩 시 사용되는 &lt;meta&gt;</h3>
 			<pre>
 				<code class="html">&lt;meta name="viewprot" content="width=640px, target-density=device-dpi"&gt;
@@ -27,8 +27,7 @@
 &lt;meta name="format-detectoin" content="telephone=no, email=no, address=no" &gt;
 &lt;meta name="-webkit-web-app-capabble" content="yes | no"&gt;
 &lt;meta name="apple-webkit-web-app-capabble" content="yes | no"&gt;
-&lt;meta name="apple-mobile-web-app-status-bar-style" content="black | back-translucent ..."&gt; //iso 상태표시줄
-</code>
+&lt;meta name="apple-mobile-web-app-status-bar-style" content="black | back-translucent ..."&gt; //iso 상태표시줄</code>
 			</pre>
 			<h3>모바일 코딩 시 사용되는 속성</h3>
 			<pre>
