--- a/sub1_6.html
+++ b/sub1_6.html
@@ -20,7 +20,7 @@
 		<div id="content">
 			<h2>CSS reset</h2>
 			<h3>Cross Browsing</h3>
-			<p>CSS reset은 Cross Browsing 기법 중 하나이다. Cross Browsing은 다음을 뜻한다.</p>
+			<p>CSS reset은 Cross Browsing 기법 중 하나이다. <a href="http://www.mozilla.or.kr/docs/web-developer/standard/crossbrowsing.pdf" target="_blank" title="새창열림"> Cross browsing 가이드</a>와 <a href="https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/Cross_browser_testing/Introduction" target="_blank" title="새창열림">MDN</a>에서는 이렇게 설명하고 있다.</p>
 			<blockquote cite="http://www.mozilla.or.kr/docs/web-developer/standard/crossbrowsing.pdf">
 				Cross Browsing이란 적어도 표준 웹기술을 채용하여 다른 기종 혹은 플랫폼에 따라 달리 구현되는 기술을 비슷하게 만듦과 동시에 어느 한쪽에 최적화되어 치우치지 않도록 공통 요소를 사용하여 웹 페이지를 제작하는 기법을 말하는 것이다. 또한, 지원할 수 없는 다른 웹 브라우저 사용자가 방문했을 때 정보로서의 소외감을 느끼지 않도록 하는 방법론적 가이드를 의미하는 것이다.
 			</blockquote>
