--- a/sub1_4.html
+++ b/sub1_4.html
@@ -42,7 +42,8 @@
 			<small>2020-05-16</small>
 			<h3>&lt;input&gt; placeholder</h3>
 			<pre>
-				<code class="css">:placeholder-shown{
+				<code class="css">
+::placeholder{
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap
@@ -54,6 +55,11 @@
 	-webkit-box-orient: vertical;
 	height: [height];
 	text-overflow: ellipsis;
+}
+:placeholder-shown{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap
 }
 :placeholder-shown{
 	overflow: hidden;
