--- a/sub1_4.html
+++ b/sub1_4.html
@@ -42,21 +42,7 @@
 			<small>2020-05-16</small>
 			<h3>&lt;input&gt; placeholder</h3>
 			<pre>
-				<code class="css">
-::placeholder{
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap
-}
-::placeholder{
-	overflow: hidden;
-	display: -webkit-box;
-	-webkit-line-clamp: [number];
-	-webkit-box-orient: vertical;
-	height: [height];
-	text-overflow: ellipsis;
-}
-:placeholder-shown{
+				<code class="css">:placeholder-shown{
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap
