--- a/sub2_3.html
+++ b/sub2_3.html
@@ -57,6 +57,9 @@
 				왜인지 <a href="https://kenwheeler.github.io/slick" target="_blank" title="새창열림">slick</a>에서 제공하는 cdn이 제대로 작동하지 않는다. 그래서 <a href="https://cdnjs.com/libraries/slick-carousel" target="_blank" title="새창열림">cdnjs</a>에서 가져왔다. 1.9.0 에서는 slick-slide 안에 div가 하나더 생기는 오류가 있다.
 			</p>
 			<small>2020-05-14</small>
+			<h3>버전 1.9.0 이상의 PlugIn이 div를 하나 더 만드는 문제</h3>			
+			<p><a href="https://cdnjs.com" target="_blank" title="새창열림">cdnjs.com</a>을 이용해 확인한 결과 1.9.0 이상의 버전의 경우 div를 하나 더 만들어 버린다. 유의비람.</p>
+			<small>2020-05-20</small>
 			<h3>DOM</h3>			
 			<pre>
 				<code class="html">&lt;div class="your-class slick-initialized slick-slider"&gt;
