--- a/sub1_7.html
+++ b/sub1_7.html
@@ -28,7 +28,7 @@
 			<h3>반응형 높이 지정</h3>
 			<pre>
 				<code class="css">div{position: relative; width: 100%; height: 0; padding-bottom: 56.25%;}
-div iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;}code>
+div iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;}<code>
 			</pre>
 			<p>반응형에서 &lt;iframe width="100%" height="auto"&gt;로 두면 height가 너무 작아진다. 이를 해결하기 위해 &lt;iframe&gt;을 한 번더 감싼 뒤에 padding-bottom: 56.25%;을 줘야한다. 이때, 56.25%는 100 * (9 / 16)이다.</p>
 			<small>2020-05-25</small>
