--- a/index.html
+++ b/index.html
@@ -1,37 +1,7 @@
 ---
 layout: default
-date: 2020-05-20
-title: home
+date: 2020-05-11
+title: HyunJin Study
 ---
-<!doctype html>
-<html lang="ko">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="google-site-verification" content="H6VrNCQV_FasPUPBicvcr6rj160agELzS_xKc5mJQeM">
-<title>Hyunjin study</title>
-<link rel="stylesheet" href="/css/reset.css?ver=1.0" type="text/css">
-<link rel="stylesheet" href="/css/main.css?ver=1.0" type="text/css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" type="text/css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
-</head>
-<body>
-<div id="wrap">
-	<header id="header">{% include header.html %}</header>
-	<div id="container">
-		<div class="aside_wrap"><aside id="aside">{% include aside.html %}</aside></div>
-		<div id="content">
-			<h2>HyunJin Study</h2>
-			<p>개인 위키. 디자인과 코딩이 주를 이룬다.
-			</p>
-			<small>2020-05-11</small>
-		</div>
-	</div>
-</div>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="/script/main.js"></script>
-</body>
-</html>
+<p>개인 위키. 디자인과 코딩이 주를 이룬다.</p>
+<small>2020-05-11</small>
