--- a/_posts/HTML, CSS/2020-05-16-마크업-개발-레벨-테스트.html
+++ b/_posts/HTML, CSS/2020-05-16-마크업-개발-레벨-테스트.html
@@ -2,9 +2,8 @@
 layout: post
 title:  "마크업 개발 레벨 테스트"
 date: 2020-05-16
-categories: HTML_CSS
+categories: [HTML, CSS]
 ---
-
 <h3>HTML</h3>
 <h4>1. Doctype을 사용하지 않을 때는 무슨 일이 발생할까요?</h4>
 <p>doctype은 html버전을 선언한다. chrome에서는 html5으로 인식한다.</p>
