--- a/_posts/Git/2020-05-18-GIt-기본-명령어.html
+++ b/_posts/Git/2020-05-18-GIt-기본-명령어.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "GIt 기본 명령어"
+title:  "Git 기본 명령어"
 date: 2020-05-18
-categories: [Git]
+category: "Git"
 ---
 <h3>Git 다운로드</h3>
 <p>우선 <a href="https://gitforwindows.org" target="_blank" title="새창열림">Git</a>을 설치한다.</p>
