--- a/_posts/HTML, CSS/2020-05-11-fadeIn,-fadeOut-배너.html
+++ b/_posts/HTML, CSS/2020-05-11-fadeIn,-fadeOut-배너.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "fadeIn, fadeOut 배너"
 date: 2020-05-11
-categories: [HTML, CSS]
+category: "HTML, CSS"
 ---
 <h3>CSS만을 이용 fadeIn, fadeOut 배너</h3>
 <pre>
