--- a/_posts/HTML, CSS/2020-05-18-모바일-코딩.html
+++ b/_posts/HTML, CSS/2020-05-18-모바일-코딩.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "모바일 코딩"
 date: 2020-05-18
-categories: [HTML, CSS]
+category: "HTML, CSS"
 ---
 <h3>모바일 코딩 시 사용되는 &lt;meta&gt;</h3>
 <pre>
