--- a/_posts/HTML, CSS/2020-05-22-CSS-reset.html
+++ b/_posts/HTML, CSS/2020-05-22-CSS-reset.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "CSS reset"
 date: 2020-05-22
-categories: [HTML, CSS]
+category: "HTML, CSS"
 ---
 <h3>Cross Browsing</h3>
 <p>CSS reset은 Cross Browsing 기법 중 하나이다. <a href="http://www.mozilla.or.kr/docs/web-developer/standard/crossbrowsing.pdf" target="_blank" title="새창열림"> Cross browsing 가이드</a>와 <a href="https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/Cross_browser_testing/Introduction" target="_blank" title="새창열림">MDN</a>에서는 이렇게 설명하고 있다.</p>
