--- a/_posts/HTML, CSS/2020-0525-Youtube-iframe.html
+++ b/_posts/HTML, CSS/2020-0525-Youtube-iframe.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "Youtube iframe"
 date: 2020-05-25
-categories: [HTML, CSS]
+category: "HTML, CSS"
 ---
 <h3>iframe 삽입</h3>
 <pre>
