--- a/_posts/JQuery/2020-05-16-PlugIn-Highlight.html
+++ b/_posts/JQuery/2020-05-16-PlugIn-Highlight.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "PlugIn Highlight"
 date: 2020-05-16
-categories: [JQuery]
+category: "JQuery"
 ---
 <h3>Settings</h3>
 			<pre>
