--- a/_posts/코딩도장/2020-02-20-level1-Multiples-Of-3-and-5.html
+++ b/_posts/코딩도장/2020-02-20-level1-Multiples-Of-3-and-5.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "level1 Multiples Of 3 and 5"
 date: 2020-02-20
-categories: [코딩도장]
+category: "코딩도장"
 ---
 <h3>problem</h3>
 <p>10미만의 자연수에서 3과 5의 배수를 구하면 3, 5, 6, 9이다. 이들의 총합은 23이다.<br>1000미만의 자연수에서 3, 5의 배수의 총합을 구하라</p>
