--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 date: 2020-05-11
-title: HyunJin Study
+title: index
 ---
+<h2>HyunJin Study</h2>
 <p>개인 위키. 디자인과 코딩이 주를 이룬다.</p>
 <small>2020-05-11</small>
