--- a/_posts/HTML, CSS/2020-05-22-CSS-reset.html
+++ b/_posts/HTML, CSS/2020-05-22-CSS-reset.html
@@ -18,15 +18,15 @@ category: "HTML, CSS"
 	html 태그 중 상당 수가 browser 마다 각기 다른 css가 적용되어 있다. 예를 들면, &lt;select&gt;는 여러개의 &lt;option&gt;들을 선택할 수 있는 드롭다운 리스트를 만들어 준다. 하지만 ie, chrome, edge에서 보이는 형태는 제각각이다. CSS reset은 최대한 이러한 차이를 줄이고자 사용하는 것이다.
 </p>
 <p>
-	인터넷에 서치하면 <a href="https://meyerweb.com/eric/tools/css/reset">Eric My</a>의 것이 가장 많이 인용되는데, firefox, opera 등의 브라우저를 많이 사용하는 사용자를 고려한 것으로 보인다. 때문에 ie, chrome 점유율이 높은 국내 사이트에는 부적합하다. 게다가 최종 업데이트가 년에 이루어 졌기 때문에 참고할 수 없다.<br>
+	인터넷에 서치하면 <a href="https://meyerweb.com/eric/tools/css/reset">Eric Myer</a>의 것이 가장 많이 인용되는데, firefox, opera 등의 브라우저를 많이 사용하는 사용자를 고려한 것으로 보인다. 때문에 ie, chrome 점유율이 높은 국내 사이트에는 부적합하다. 게다가 최종 업데이트가 년에 이루어 졌기 때문에 참고할 수 없다.<br>
 	국내 사이트는 <a href=" https://yuilibrary.com/yui/docs/cssreset">야후</a>와 <a href="http://darum.daum.net/convention/css/css_convention">다음</a>이 있다. 이쪽이 훨씬 참고하기 좋다.<br>
 	하지만 결국 어디까지 reset할 건지의 기준은 사람마다 다르기 때문에 reset.css는 본인이 만드는 것이 제일 좋다. 아래는 현재 내가 사용하고 있는 내 CSS reset이다.
 </p>
 <pre>
-				<code class="css">/* Last update: 2020-05-21 */
+	<code class="css">/* Last update: 2020-05-26 */
 *{-webkit-text-size-adjust: none;}
-html {font-family: 'Nanum Gothic', sans-serif; font-size:10px;} 
-body {min-height: 800px;}
+html{font-family: '맑은 고딕', sans-serif; font-size:10px;, font-weight: 400;} 
+body{min-height: 800px;}
 body, div, h1, h2, h3, h4, h5, h6, p, pre, code, form, fieldset,legend, textarea, blockquote, th, td, input, select, textarea, button,dl,dt,dd {margin: 0; padding: 0;}
 header, nav, section, article, aside, footer{display: block; margin: 0; padding: 0;}
 ul, ol {margin: 0; padding: 0;list-style: none;}
@@ -35,5 +35,5 @@ table {table-layout: fixed; border-collapse: collapse; border-spacing: 0;}
 a:link, a:visited, a:hover, a:active {text-decoration: none;}
 h1, h2, h3, h4, h5, h6, p, a, li, ul, ol, small, span, em, i, b, strong, input{color: #222;}
 u, s{text-decoration: none;}
-button{border: none;background-color: transparent;}</code>
+button, input{border: none;background-color: transparent;}</code>
 </pre>
