--- a/404.html
+++ b/404.html
@@ -1,25 +1,7 @@
 ---
 permalink: /404.html
-layout: default
+layout: post
+title: 404
 ---
-
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<h3>페이지를 찾을 수 없습니다.</h3>
+<p>요청하신 페이지가 사라졌거나 존재하지 않습니다.</p>
