--- a/_posts/Git/2020-05-18-Git-baic-command.html
+++ b/_posts/Git/2020-05-18-Git-baic-command.html
@@ -6,7 +6,7 @@ category: "Git"
 ---
 <h3>Git 다운로드</h3>
 <p>우선 <a href="https://gitforwindows.org" target="_blank" title="새창열림">Git</a>을 설치한다.</p>
-<h3>초기 설정</h3>
+<h3>사용자 설정</h3>
 <pre>
 	<code class="shell">$ git config --global user.name "[your name]"
 $ git config --global user.email "[your email]"</code>
@@ -25,7 +25,8 @@ $ git init</code>
 </p>
 <h3>파일 생성 및 커밋</h3>
 <pre>
-	<code class="shell">$ git status$ touch [file]
+	<code class="shell">$ git status
+$ touch [file]
 $ git add [file]
 $ git commit -m "제목(영문 70자 이하) 공백 내용"
 $ git commit --amend -m "최근 커밋 메세지 수정"
@@ -48,5 +49,5 @@ $ git push origin master</code>
 </pre>
 <p>ctrl + v 는 insert를 누르면 된다.</p>
 <h3>깃허브 저장소 복제</h3>
-<pre><code class="shell">$git clone [url]</code></pre>
+<pre><code class="shell">$ git clone [url]</code></pre>
 <small>2020-05-18</small>
