--- a/_posts/HTML, CSS/2020-05-27-Problem-between-block-element-1px-margin.html
+++ b/_posts/HTML, CSS/2020-05-27-Problem-between-block-element-1px-margin.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Preblem Block 요소 사이에 생기는 1px margin"
+title:  "Problem Block 요소 사이에 생기는 1px margin"
 date: 2020-05-28
 category: "HTML, CSS"
 tag: problem
