--- a/_posts/HTML, CSS/2020-05-27-Problem-between-block-element-1px-margin.html
+++ b/_posts/HTML, CSS/2020-05-27-Problem-between-block-element-1px-margin.html
@@ -32,9 +32,9 @@ tag: problem
 	</ul>
 <h3>Reference</h3>
 	<ul>
-		<li>https://stackoverflow.com/questions/36311124/white-line-in-mobile-website</li>
-		<li>https://stackoverflow.com/questions/51314873/extra-1px-white-line-after-footer</li>
-		<li>https://stackoverflow.com/questions/25388212/1px-margin-between-two-vertically-laid-out-divs-in-chrome-please-read-details</li>
+		<li><a href="https://stackoverflow.com/questions/36311124/white-line-in-mobile-website" target="_blank" title="새창열림">https://stackoverflow.com/questions/36311124/white-line-in-mobile-website</a></li>
+		<li><a href="https://stackoverflow.com/questions/51314873/extra-1px-white-line-after-footer" target="_blank" title="새창열림">https://stackoverflow.com/questions/51314873/extra-1px-white-line-after-footer</a></li>
+		<li><a href="https://stackoverflow.com/questions/25388212/1px-margin-between-two-vertically-laid-out-divs-in-chrome-please-read-details" target="_blank" title="새창열림">https://stackoverflow.com/questions/25388212/1px-margin-between-two-vertically-laid-out-divs-in-chrome-please-read-details</a></li>
 	</ul>
 <small>2020-05-27</small>
 
