--- a/_posts/dojang/2020-02-20-level1-Multiples-Of-3-and-5.html
+++ b/_posts/dojang/2020-02-20-level1-Multiples-Of-3-and-5.html
@@ -4,7 +4,7 @@ title:  "level1 Multiples Of 3 and 5"
 date: 2020-02-20
 category: "코딩도장"
 ---
-<h3>problem</h3>
+<h3>Problem</h3>
 <p>10미만의 자연수에서 3과 5의 배수를 구하면 3, 5, 6, 9이다. 이들의 총합은 23이다.<br>1000미만의 자연수에서 3, 5의 배수의 총합을 구하라</p>
 <h3>solution</h3>
 <pre>
@@ -19,4 +19,6 @@ category: "코딩도장"
 	return result;
 }</code>
 		</pre>
-			<small>2020-02-20</small>
+<h3>Reference</h3>
+<a href="http://codingdojang.com/scode/350" target="_blank" title="새창열림">http://codingdojang.com/scode/350</a>
+<small>2020-02-20</small>
