--- a/_posts/MySQL/2020-06-02-MySQL-settings.html
+++ b/_posts/MySQL/2020-06-02-MySQL-settings.html
@@ -31,8 +31,7 @@ desc [table];</code>
 <h3>MySQL 종료하기</h3>
 <pre>
 	<code class="DOS">quit
-exit		
-	</code>
+exit</code>
 </pre>
 <h3>MySQL 비밀번호 설정</h3>
 <pre>
