--- a/_posts/MySQL/2020-06-02-MySQL-settings.html
+++ b/_posts/MySQL/2020-06-02-MySQL-settings.html
@@ -15,7 +15,7 @@ category: "MySQL"
 <p>다음은 xampp control pannel로 Apache와 MySQL을 실행한 뒤 입력한다.</p>
 <pre>
 	<code class="DOS">cd \xampp\mysql\bin
-mysql -u root
+mysql -u root (-p[password]) ([database]);
 show databases;
 create database [database]; 
 use [database];
