--- a/_posts/Programmers/2020-02-19-level1-watermelon.html
+++ b/_posts/Programmers/2020-02-19-level1-watermelon.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "level1 수박수박수"
+title:  "level1 수박수박수박수박수박수?"
 date: 2020-02-19
 category: "프로그래머스"
 ---
@@ -33,4 +33,5 @@ if(n <= 10000){
 }</code>
 </pre>
 <h3>Reference</h3>
+<a href="https://programmers.co.kr/learn/courses/30/lessons/12922" target="_blank" title="새창열림">https://programmers.co.kr/learn/courses/30/lessons/12922</a>
 <small>2020-02-19</small>
