--- a/_posts/Programmers/2020-02-19-level1-even-and-odd.html
+++ b/_posts/Programmers/2020-02-19-level1-even-and-odd.html
@@ -26,4 +26,5 @@ category: "프로그래머스"
 solution();</code>
 </pre>
 <h3>Reference</h3>
+<a href="https://programmers.co.kr/learn/courses/30/lessons/12937" target="_blank" title="새창열림">https://programmers.co.kr/learn/courses/30/lessons/12937</a>
 <small>2020-02-19</small>
