--- a/_posts/MySQL/2020-06-10-Database-Table-BackUp-Restore.html
+++ b/_posts/MySQL/2020-06-10-Database-Table-BackUp-Restore.html
@@ -16,7 +16,7 @@ mysql -u root -p[password] [database] < [file.txt]</code>
 </pre>
 <h3>txt -> table load</h3>
 <pre>
-	<code class="dos">cd C:/[folder]/[file.txt]
+	<code class="dos">cd C:\[folder]\[file.txt]
 load data infile 'C:/[folder]/[file.txt]' into table [table] field terminated by '[구분자]'
 </code>
 </pre>
